Attemped fix of horizontal overflow.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,6 +76,7 @@ input, select, textarea {
 
 	html {
 		box-sizing: border-box;
+		overflow-x: hidden;
 	}
 
 	*, *:before, *:after {
